SVN


* Making it possible to include models by default by declaring in your application_controller.php

{{{
  var $app_models = 'user,role';
}}}

this way you can avoid adding controller-wide models into every single controller.

* HTTP authentication now can have its own failure message by implementing a **access_denied** method into the application controller.

----------------------

* Model generator now supports customizing first migration version column setting from the command line like:

    ./generate model Video title, length double, author, is_searchable

* Relocated Active Record database adapters, behaviors and associations into lib/AkActiveRecord/AkDbAdapters, AkActsAsBehaviours and AkAssociations respectively.

----------

## Merging Kaste's branch with the trunk.

    WARNING: IMPORTANT CHANGES AHEAD!

* [387] Refactored AkActiveRecord::find(). 
* [387] API-change: removed find('first', $id, $options) cause finding one id is always "first". Use find($id, $options); instead.
* [395] Deprecated AkActiveRecord::find($sql) which silently expanded to AkActiveRecord::find('first', $sql).
This was ambiguous because find($sql, $bind_variables*) expanded to find('all',*)
Use AkActiveRecord::find('first', $sql) instead.
* [396] Added AkDbAdapter between ADODb and the Active Record.
* [396] Expanded AkUnitTest so its easy to generate Models on the fly like: 

    $AkUnitTest->installAndIncludeModels(array('Article'=>'id,name,description'));

Creates the table 'articles' with specified columns and builds the ActiveRecord Model (class) 'Article'.
* [396] AkActiveRecord::toYaml now handles ActiveRecord collections.

    User::toYaml($found_users);

* [407] Fixed typos on the Active Record like $asssociated_ids....
* [407] Improved and refactored Active Record unit tests.
* [405] Fixed AkHasAndBelongsToMany/AkHasMany::getAssociatedModelInstance which Singleton was badly implemented.
* [416] Avoided unsetting database profiles.